Fixed: Broken credits button in Russian on narrow screen

--- a/styles/outro.css
+++ b/styles/outro.css
@@ -378,7 +378,6 @@
 
 #credits
 {
-	padding-bottom: 3vh;
 	width: 90%;
 	margin-left: 5%;
 	color: var(--color-highlight);
@@ -400,16 +399,18 @@
 {
 	padding-bottom: 3vh;
 	color: var(--color-light);
+	display: inline-block;
+	background-color: rgba(255, 255, 255, 0.1);
+	border: 0.3vh solid white;
+	border-radius: 2vh;
+	padding: 1vh 2vh 1vh 2vh;
+	margin: 2vh;
 }
 
 #anotherGame a
 {
 	color: white;
 	text-decoration: none;
-	background-color: rgba(255, 255, 255, 0.1);
-	border: 0.3vh solid white;
-	border-radius: 2vh;
-	padding: 1vh 2vh 1vh 2vh;
 }
 
 #anotherGame a:hover
